# interest-rate-derivatives

./: CHANGELOG.md  README.md  pyproject.toml
HW1/: USTreasuryBond.py  executable.ipynb  q1.py
HW4/: FrontEndCurve 20251217bu.xlsx
HW4/data/: 20251217_sofr_futures.csv
HW4/scripts/: hw4_executable.ipynb
HW4/src/: calibrator.py  curve_builder.py  date_utilities.py  main.py  sofr_swap.py  yield_curve.py
data/hw2_data/: hw2_bond_info.csv
data/hw3_data/: hw3_new_data.xlsx
fixed_income/: pyproject.toml
fixed_income/data/hw2_data/: hw2_bond_pricing.csv
fixed_income/data/hw3_data/: effr_20251217.xlsx
fixed_income/data/hw4_data/: SOFRData20251217.csv  SOFRSwapRatesData20251217.csv
fixed_income/scripts/hw2/: data_handling.ipynb  executable.ipynb  hw2.py
fixed_income/src/fixed_income/calibration/: calibrate_nelson_siegel_svensson.py
fixed_income/src/fixed_income/dates/: calendars.py  convert.py  daycount.py
fixed_income/src/fixed_income/instruments/: __init__.py  bond.py
fixed_income/src/fixed_income/market_data/: __init__.py  bloomberg_csv.py
reference/: DateUtilities.py  USTreasuryBond.py
scripts/hw3/: executable_part2.ipynb
src/fixed_income/: __init__.py
src/fixed_income.egg-info/: PKG-INFO  SOURCES.txt
src/fixed_income/calibration/: __init__.py
src/fixed_income/curves/: __init__.py  dummy_zero_curve.py  ffer_curve.py  nelson_siegel_svensson_spline.py  zero_curve.py
src/fixed_income/dates/: __init__.py  adjust.py  constants.py  imm.py  utils.py
src/fixed_income/instruments/: __init__.py  bond.py  fed_funds_futures.py
(+1 files in other folders)
